deploy-gogs.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gogs
  # labels:
  #   istio-injection: enabled

# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: gogs-pv
#   namespace: gogs
#   labels:
#     type: local
# spec:
#   accessModes:
#     - ReadWriteOnce
#   capacity:
#     storage: 2Gi
#   hostPath:
#     path: /mnt/data/gogs

---
# apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
        # istio-injection: enabled
        # version: v1
    spec:
      containers:
      - name: gogs
        image: gogs/gogs
        ports:
        - containerPort: 22
          name: ssh
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: gogs-persistent-storage
          mountPath: /data
      volumes:
      - name: gogs-persistent-storage
        persistentVolumeClaim:
          claimName: gogs-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: gogs-svc
  namespace: gogs
spec:
  type: NodePort
  selector:
    app: gogs
  ports:
  - name: ssh
    protocol: TCP
    port: 10022
    targetPort: 22
    nodePort: 30022
  - name: http
    protocol: TCP
    port: 18080
    targetPort: 3000
    nodePort: 30080

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: gogs-ingress
#   namespace: gogs
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: gogs.local
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: gogs-svc
#           servicePort: 18080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gogs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogs-svc
            port:
              number: 18080
